--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <title>ball game git</title>
 </head>
 <body>
-    <h1>The Ball game</h1>    
+    <h1>The Ball game</h1>
+    <div class="ball">100</div>    
 </body>
 </html>
