--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
     <title>ball game git</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <h1>The Ball game</h1>
