--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 </head>
 <body>
     <h1>The Ball game</h1>
-    <div class="ball">100</div>    
+    <div class="ball" onclick="onBallClick(this)">100</div>  
+    <script src="main.js"></script>  
 </body>
 </html>
