--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <body>
     <h1>The Ball game</h1>
     <div class="ball" onclick="onBallClick(this)">100</div>  
-    <script src="main.js"></script>  
+    <script src="main.js"></script>
+    <script src="util.js"></script>  
 </body>
 </html>
