--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
 </head>
 <body>
     <h1>The Ball game</h1>
-    <div class="ball ball1" onclick="onBallClick(this)">100</div>
-    <div class="ball ball2" onclick="onBallClick(this)">100</div>
+    <div class="ball ball1" onclick="onBallClick1(this)">100</div>
+    <div class="ball ball2" onclick="onBallClick2(this)">100</div>
+    <div class="ball ball3" onclick="onBallClick3(this)">100</div>
     <script src="main.js"></script>
     <script src="util.js"></script>  
 </body>
