Add ball4 style&func

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <div class="ball ball1" onclick="onBallClick1(this)">100</div>
     <div class="ball ball2" onclick="onBallClick2(this)">100</div>
     <div class="ball ball3" onclick="onBallClick3(this)">100</div>
+    <div class="ball ball4" onclick="onBallClick4(this)">100</div>
+    <div class="ball ball5" onclick="onBallClick5(this)">100</div>
     <script src="main.js"></script>
     <script src="util.js"></script>  
 </body>
