Add ball6 style & func

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <div class="ball ball3" onclick="onBallClick3(this)">100</div>
     <div class="ball ball4" onclick="onBallClick4(this)">100</div>
     <div class="ball ball5" onclick="onBallClick5(this)">100</div>
+    <div class="ball ball6" onclick="onBallClick6(this)">100</div>
     <script src="main.js"></script>
     <script src="util.js"></script>  
 </body>
